--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
               <div class="col-sm-7 col-md-7">
                 <div class="content">
-                  <h1><strong>HORSE</strong> <b>POWER</b></h1>
+                  <h1 class="hpheading"><strong>HORSE</strong> <b>POWER</b></h1>
 				  <h2>Unleash the energy within</h2> 
                   <div class="button" id="download-app1">
                     <a href="https://www.swiggy.com/city/bangalore/horse-power-maruthi-nagar-marathahalli-rest939968" class="btn btn-default btn-lg custom-btn">Order Now</a>
