--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     <!-- ====== End Screenshots Section ====== -->
  
     <!-- ====== Testimonial Section ====== -->
-    <section id="testimonial">
+     <section id="testimonial">
       <div class="bg-color bg-testimonial">
         <div class="testimonial section-padding">
           <div class="container">
@@ -368,45 +368,45 @@
                 </ol>
                 <div class="carousel-inner">
 
-                  <div class="item">
+                  <!-- <div class="item">
                     <div class="image">
-                      <img src="images/01.jpg" alt="">
-                    </div> <!-- end .image -->
-                    <div class="content">
+                      <img src="images/01.jpg" alt=""> -->
+                    <!-- </div> end .image -->
+                    <!-- <div class="content">
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut dignissimos ipsam obcaecati corrupti modi, deserunt facere asperiores. Voluptatum laudantium ut, minus nam. Libero facilis aspernatur cumque, quisquam quod sint odit.</p>
                       <h4>Jon Doe</h4>
-                      <h5>Web developer</h5>
-                    </div> <!-- end .content -->
-                  </div> <!-- end .item (1) -->
+                      <h5>Web developer</h5> -->
+                    <!-- </div> end .content -->
+                  <!-- </div> end .item (1)
 
                   <div class="item active left">
                     <div class="image">
-                      <img src="images/02.jpg" alt="">
-                    </div> <!-- end .image -->
-                    <div class="content">
+                      <img src="images/02.jpg" alt=""> -->
+                    <!-- </div> end .image -->
+                    <!-- <div class="content">
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut dignissimos ipsam obcaecati corrupti modi, deserunt facere asperiores. Voluptatum laudantium ut, minus nam. Libero facilis aspernatur cumque, quisquam quod sint odit.</p>
                       <h4>Jon Doe</h4>
-                      <h5>Web developer</h5>
-                    </div> <!-- end .content -->
-                  </div> <!-- end .item (2) -->
+                      <h5>Web developer</h5> -->
+                    <!-- </div> end .content -->
+                  <!-- </div> end .item (2) -->
 
-                  <div class="item next left">
+                  <!-- <div class="item next left">
                     <div class="image">
-                      <img src="images/03.jpg" alt="">
-                    </div> <!-- end .image -->
-                    <div class="content">
+                      <img src="images/03.jpg" alt=""> -->
+                    <!-- </div> end .image -->
+                    <!-- <div class="content">
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut dignissimos ipsam obcaecati corrupti modi, deserunt facere asperiores. Voluptatum laudantium ut, minus nam. Libero facilis aspernatur cumque, quisquam quod sint odit.</p>
                       <h4>Jon Doe</h4>
-                      <h5>Web developer</h5>
-                    </div> <!-- end .content -->
-                  </div> <!-- end .item (3) -->
+                      <h5>Web developer</h5> -->
+                    <!-- </div> end .content -->
+                  <!-- </div> end .item (3) -->
 
-                </div> <!-- end .carousel-inner -->
-              </div> <!-- end #carousel-testimonial -->
-            </div> <!-- end .testimonial-slide -->
-          </div> <!-- end .container -->
-        </div> <!-- end .testimonial -->
-      </div> <!-- end .bg-testimonial -->
+                 </div> <!-- end .carousel-inner -->
+               </div> <!-- end #carousel-testimonial -->
+             </div> <!-- end .testimonial-slide -->
+           </div> <!-- end .container -->
+         </div> <!-- end .testimonial -->
+      </div> <!--  end .bg-testimonial -->
     </section>
     <!-- ====== End Testimonial Section ====== -->
 
